# mini-CAHs

./: .env.example  .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
.pico/memory/: MEMORY.md
.pico/sessions/: 20260606-144409-c37eb8.events.jsonl  20260606-144409-c37eb8.json
benchmarks/: coding_tasks.json
docs/: configuration.md  memory.md  sandbox.md  skills.md
miniCAH/: __init__.py  cli.py  testing.py
miniCAH/commands/: slash.py
miniCAH/config/: __init__.py
miniCAH/core/: __init__.py  context_manager.py  model_output.py  plan_mode.py  runtime.py  tool_executor.py  worker_manager.py  worker_runtime.py  workspace.py
miniCAH/evaluation/: __init__.py  evaluator.py  metrics.py  run_evidence.py
scripts/: collect_resume_metrics.py  run_business_scenario_dogfood.py  run_large_scale_experiments.py  run_provider_experiments.py  run_real_session_acceptance.py  run_v3_human_scenario_gate.py
tests/: test_agent_workers_acceptance.py  test_architecture_boundaries.py  test_ask_user.py  test_business_scenario_dogfood.py  test_context_governance_acceptance.py  test_context_manager.py  test_engine_acceptance.py  test_evaluator.py  test_memory.py  test_metrics.py  test_permissions_acceptance.py  test_pico.py  test_release_smoke.py  test_run_evidence.py  test_run_store.py  test_runtime_evidence_acceptance.py  test_safety_invariants.py  test_sandbox_config.py  test_sandbox_runner.py  test_skills_acceptance.py  test_task_state.py  test_todo_ledger_acceptance.py  test_tool_policy_acceptance.py  test_tui.py  test_usage.py  test_v3_runtime.py
(+30 files in other folders)
