[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miniCAH"
version = "0.3.0"
description = "Small local coding agent for OpenAI-compatible, Anthropic-compatible, and DeepSeek models"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.86.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
miniCAH = "miniCAH.cli:main"
miniCAH-tui = "miniCAH.tui.main:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.4.4",
]

[tool.setuptools.packages.find]
include = ["miniCAH*"]

[tool.pytest.ini_options]
norecursedirs = [
  ".git",
  ".venv",
  "artifacts",
  "build",
  "dist",
]
